# agsutil

./: .gitignore  404.html  README.md  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  util.py
.github/workflows/: tests.yml
agsutil/: __init__.py  algos.py  autograd.py  plots.py  utils.py
api/: index.html
docs/: api.md
docs/examples/: plots.ipynb
examples/plots/: index.html
search/: search_index.json
